implemented  crud operations for BooksController

--- a/BookStore/Views/Books/Create.cshtml
+++ b/BookStore/Views/Books/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create a new book</h1>
 
 <h4>Book</h4>
 <hr />
@@ -33,12 +33,14 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AuthorId" class="control-label"></label>
-                <select asp-for="AuthorId" class ="form-control" asp-items="ViewBag.AuthorId"></select>
+                <label asp-for="Author.Name" class="control-label">Author Name</label>
+                <input asp-for="Author.Name" class="form-control" placeholder="Enter author name" />
+                <span asp-validation-for="Author.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PublisherId" class="control-label"></label>
-                <select asp-for="PublisherId" class ="form-control" asp-items="ViewBag.PublisherId"></select>
+                <label asp-for="Publisher.Name" class="control-label">Publisher Name</label>
+                <input asp-for="Publisher.Name" class="form-control" placeholder="Enter publisher name" />
+                <span asp-validation-for="Publisher.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
