--- a/BookStore/Views/Books/Index.cshtml
+++ b/BookStore/Views/Books/Index.cshtml
@@ -7,41 +7,48 @@
 <h1>All books available</h1>
 
 <div class="container">
-    <div class="m-3">
-        <a class="btn btn-success" asp-controller="Books" asp-action="Create">Add new book</a>
+    
+    @if (User.Identity.IsAuthenticated)
+    {
+        <div class="m-3">
+            <a class="btn btn-success" asp-controller="Books" asp-action="Create">Add new book</a>
+        </div>
+    }
 
-    </div>
-
-    @for(int i=0;i<Model.Count; i++)
+    @for (int i = 0; i < Model.Count; i++)
     {
         var item = Model[i];
-        if(i % 4 == 0)
+        if (i % 4 == 0)
         {
             @:<div class="row">
         }
+
         <div class="col-3 m-3">
 
             <div class="card" style="width: 18rem; height: 33rem">
-              <a asp-controller="Books" asp-action="Details" asp-route-id="@item.Id"><img class="card-img-top" src="@item.Image" alt="Card image cap"  style="width: 100%; height: 200px; object-fit: cover;"></a>
-              <div class="card-body">
-                <h5 class="card-title">@item.Title</h5>
-                <p class="card-text text-truncate-3-lines">@item.Description</p>
-              </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">Author: @item.Author.Name</li>
-                <li class="list-group-item">Publisher: @item.Publisher.Name</li>
-                <li class="list-group-item">Price: @item.Price ден.</li>
-              </ul>
-              <div class="card-body">
-                    <a asp-controller="Books" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-info">Edit</a>
-                    <a asp-controller="Books" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
-                    <a asp-controller="Books" asp-action="AddToCart" asp-route-id="@item.Id" class="btn btn-info">Add to Cart</a>
-              </div>
+                <a asp-controller="Books" asp-action="Details" asp-route-id="@item.Id"><img class="card-img-top" src="@item.Image" alt="Card image cap" style="width: 100%; height: 200px; object-fit: cover;"></a>
+                <div class="card-body">
+                    <h5 class="card-title">@item.Title</h5>
+                    <p class="card-text text-truncate-3-lines">@item.Description</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Author: @item.Author.Name</li>
+                    <li class="list-group-item">Publisher: @item.Publisher.Name</li>
+                    <li class="list-group-item">Price: @item.Price ден.</li>
+                </ul>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <div class="card-body">
+                        <a asp-controller="Books" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-info">Edit</a>
+                        <a asp-controller="Books" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
+                        <a asp-controller="Books" asp-action="AddToCart" asp-route-id="@item.Id" class="btn btn-info">Add to Cart</a>
+                    </div>
+                }
             </div>
 
         </div>
 
-        if(i % 4 == 3)
+        if (i % 4 == 3)
         {
             @:</div>
         }
