Changed the looks of the app

--- a/BookStore/Views/Authors/Details.cshtml
+++ b/BookStore/Views/Authors/Details.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1 style="color: ghostwhite">Details</h1>
 
-<div>
+<div style="color: ghostwhite">
     <hr />
     @if (Model.Books.Any())
     {
@@ -24,6 +24,6 @@
     }
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-dark">Edit</a> |
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
