--- a/AdminApplication/Views/Shared/_Layout.cshtml
+++ b/AdminApplication/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Orders</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Import Users</a>
+                        </li>
                     </ul>
                 </div>
             </div>
