--- a/integrated_systems/BookStore/Views/Publishers/Index.cshtml
+++ b/integrated_systems/BookStore/Views/Publishers/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1 style="color: ghostwhite">Index</h1>
+<h1 style="color: ghostwhite">Publishers</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-outline-dark">Create New</a>
