--- a/integrated_systems/BookStore/Views/Shared/_LoginPartial.cshtml
+++ b/integrated_systems/BookStore/Views/Shared/_LoginPartial.cshtml
@@ -7,11 +7,15 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+        <a  class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+                <img src="https://cdn-icons-png.flaticon.com/512/5007/5007528.png" alt="User image" style="width:70px; height:50px; padding-right:30px"/>
+        </a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link text-dark">
+                    <img src="https://cdn-icons-png.flaticon.com/512/8455/8455227.png" alt="Log out image" style="width:70px; height:50px; padding-right:30px"  />
+            </button>
         </form>
     </li>
 }
