--- a/integrated_systems/BookStore/Views/ShoppingCarts/Index.cshtml
+++ b/integrated_systems/BookStore/Views/ShoppingCarts/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1 style="color: ghostwhite">Your Shopping Cart</h1>
 <p>
-    <a class="btn btn-success" asp-action="Order">Order Now</a>
+    <a class="btn btn-outline-success" asp-action="Order">Order Now</a>
 </p>
 
 <table class="table table-light table-striped">
