--- a/integrated_systems/BookStore/Views/Partner/Index.cshtml
+++ b/integrated_systems/BookStore/Views/Partner/Index.cshtml
@@ -35,14 +35,14 @@
                  <div class="card-body d-flex justify-content-center">
                         <img src="https://t4.ftcdn.net/jpg/02/11/07/81/360_F_211078110_mttxEdu3gsSbMKajsy98E4M4E5RUCiuo.jpg" style="width:120px; height:80px;"/>
                     </div>
-               @*  @if (User.Identity.IsAuthenticated)
-                {
-                    <div class="card-body">
-                        <a asp-controller="Books" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary">Edit</a>
-                        <a asp-controller="Books" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
-                        <a asp-controller="Books" asp-action="AddToCart" asp-route-id="@item.Id" class="btn btn-outline-info">Add to Cart</a>
-                    </div>
-                } *@
+                
+                
+                    @* <div class="card-body">
+                        <a asp-controller="Partner" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary">Edit</a>
+                        <a asp-controller="Partner" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a>
+                        <a asp-controller="Partner" asp-action="AddToCart" asp-route-id="@item.Id" class="btn btn-outline-info">Add to Cart</a>
+                    </div> *@
+                
             </div>
 
         </div>
